--- a/public/css/home.css
+++ b/public/css/home.css
@@ -35,7 +35,7 @@ p {
 	font-weight: lighter;
 	padding-right: 18%;
 	padding-left: 18%;
-	line-height: 200%;
+	line-height: 200%;s
 }
 
 a {
@@ -49,3 +49,25 @@ img {
 	margin: auto;
 	height: 190px;
 }
+
+.mangiamo {
+	height: 400px;
+	margin: auto;
+	box-shadow: 0px 2px 10px #bfbfbf;
+}
+
+.imageLeft, .imageRight {
+	width: 34%;
+	margin: 1%;
+	margin-left: 15%;
+	float: left;
+	box-shadow: 1px, 1px, black;	
+}
+
+.imageRight {
+	margin-left: 0%;
+	margin-right: 15%;
+}
+
+
+
